crates/formatter/tests/snapshots/snapshots__synapse__main__delta__56__signing_keys.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2019 New Vector Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- cross-signing keys
create table if not exists e2e_cross_signing_keys (
	user_id text not null,
	-- the type of cross-signing key (master, user_signing, or self_signing)
	keytype text not null,
	-- the full key information, as a json-encoded dict
	keydata text not null,
	-- for keeping the keys in order, so that we can fetch the latest one
	stream_id bigint not null
);

create unique index e2e_cross_signing_keys_idx
	on e2e_cross_signing_keys (user_id, keytype, stream_id);

-- cross-signing signatures
create table if not exists e2e_cross_signing_signatures (
	-- user who did the signing
	user_id text not null,
	-- key used to sign
	key_id text not null,
	-- user who was signed
	target_user_id text not null,
	-- device/key that was signed
	target_device_id text not null,
	-- the actual signature
	signature text not null
);

-- replaced by the index created in signing_keys_nonunique_signatures.sql
-- CREATE UNIQUE INDEX e2e_cross_signing_signatures_idx ON e2e_cross_signing_signatures(user_id, target_user_id, target_device_id);

-- stream of user signature updates
create table if not exists user_signature_stream (
	-- uses the same stream ID as device list stream
	stream_id bigint not null,
	-- user who did the signing
	from_user_id text not null,
	-- list of users who were signed, as a JSON array
	user_ids text not null
);

create unique index user_signature_stream_idx
	on user_signature_stream (stream_id);
